--- a/appproject/app/src/main/res/layout/activity_regist.xml
+++ b/appproject/app/src/main/res/layout/activity_regist.xml
@@ -39,7 +39,7 @@
                     android:id="@+id/location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@mipmap/red_point"
+                    android:drawableLeft="@drawable/red_point"
                     android:drawablePadding="5dp"
                     android:focusable="false"
                     android:maxLines="1"
@@ -56,7 +56,7 @@
                     android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@mipmap/red_point"
+                    android:drawableLeft="@drawable/red_point"
                     android:drawablePadding="5dp"
                     android:hint="姓名"
                     android:maxLines="1"
@@ -72,7 +72,7 @@
                     android:id="@+id/phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@mipmap/red_point"
+                    android:drawableLeft="@drawable/red_point"
                     android:drawablePadding="5dp"
                     android:hint="手机号"
                     android:inputType="phone"
@@ -89,7 +89,7 @@
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@mipmap/red_point"
+                    android:drawableLeft="@drawable/red_point"
                     android:drawablePadding="5dp"
                     android:hint="密码"
                     android:inputType="textPassword"
@@ -107,7 +107,7 @@
                     android:id="@+id/sex"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@mipmap/red_point"
+                    android:drawableLeft="@drawable/red_point"
                     android:drawablePadding="5dp"
                     android:hint="性别"
                     android:maxLines="1"
@@ -123,7 +123,7 @@
                     android:id="@+id/birthday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@mipmap/red_point"
+                    android:drawableLeft="@drawable/red_point"
                     android:drawablePadding="5dp"
                     android:hint="生日"
                     android:inputType="date"
