--- a/appproject/app/src/main/res/layout/activity_splash.xml
+++ b/appproject/app/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/sign_background"
+    android:background="@drawable/sign_background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:text="@string/app_name"
+        android:layout_marginTop="50dp"
+        android:text="月老阁"
         android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold" />
@@ -29,13 +29,15 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:text="你等的人"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="25dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="                   就在你身边"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="25dp" />
     </LinearLayout>
 
 
