--- a/appproject/app/src/main/res/values/dimens.xml
+++ b/appproject/app/src/main/res/values/dimens.xml
@@ -1,5 +1,19 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin">10dp</dimen>
+    <dimen name="activity_vertical_margin">10dp</dimen>
+    <dimen name="activity_margin">10dp</dimen>
+    <dimen name="activity_drawablepadding">5dp</dimen>
+    <dimen name="activity_inputpadding">10dp</dimen>
+    <dimen name="button_radius">4dp</dimen>
+    <dimen name="button_textsize">17dp</dimen>
+    <dimen name="title_textsize">18dp</dimen>
+    <dimen name="action_radius">2dp</dimen>
+
+
+    <dimen name="size_bigger">20dp</dimen>
+    <dimen name="size_big">18dp</dimen>
+    <dimen name="size_normal">16dp</dimen>
+    <dimen name="size_little">14dp</dimen>
+
 </resources>
