--- a/appproject/app/src/main/res/menu/main_action.xml
+++ b/appproject/app/src/main/res/menu/main_action.xml
@@ -3,6 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/all"
+        android:icon="@drawable/btn_tab_me"
+        android:title="查看全部"
+        app:showAsAction="never"></item>
+    <item
         android:id="@+id/male"
         android:icon="@drawable/btn_tab_me"
         android:title="只看男生"
