--- a/appproject/app/src/main/res/menu/main_action.xml
+++ b/appproject/app/src/main/res/menu/main_action.xml
@@ -23,6 +23,11 @@
         android:title="我的会员"
         app:showAsAction="never"></item>
     <item
+        android:id="@+id/recommend"
+        android:icon="@drawable/btn_tab_me"
+        android:title="系统推荐"
+        app:showAsAction="never"></item>
+    <item
         android:id="@+id/pick"
         android:icon="@drawable/btn_tab_me"
         android:title="提现"
