--- a/appproject/app/src/main/res/values/styles.xml
+++ b/appproject/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="actionOverflowMenuStyle">@style/OverflowMenuStyle</item>
+        <item name="android:textSize">16dp</item>
     </style>
 
     <!-- 溢出菜单样式 -->
